--- a/brafe-1/brafe-1-puro/css/style.css
+++ b/brafe-1/brafe-1-puro/css/style.css
@@ -85,3 +85,64 @@ a.menu-logo {
   font-style: italic;
   font-size: 1.125em;
 }
+
+
+
+/* Sobre */
+
+
+.sobre {
+  padding: 60px 0;
+}
+
+.sobre-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.sobre-container::after, .sobre-container::before { 
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.sobre h2 {
+  text-align: center;
+  font-size: 2.25em;
+  margin-bottom: 60px;
+}
+
+.sobre-item {
+   float: left;
+   width: 460px;
+   margin: 0 10px;
+}
+
+.sobre-item img{
+  display: block;
+  max-width: 100%;
+}
+
+.sobre-item h3 { 
+  font-size: 2.25em;
+  background: #252525;
+  width: 220px;
+  color: #fff;
+  font-style: italic;
+  font-weight: normal;
+  text-align: center;
+  line-height: 1em;
+  padding: 5px 0 10px 0;
+  top: -25px;
+  position: relative;
+
+}
+
+.sobre > p {
+  font-size: 1.125em;
+  line-height: 1.4em;
+  font-style: italic;
+  text-align: center;
+  max-width: 460px;
+  margin: 20px auto;
+}
