--- a/brafe-1/brafe-1-puro/css/style.css
+++ b/brafe-1/brafe-1-puro/css/style.css
@@ -73,7 +73,7 @@ a.menu-logo {
 }
 
 .intro h1::after {
-  content: '';
+  content: "";
   display: block;
   width: 20px;
   height: 4px;
@@ -86,10 +86,7 @@ a.menu-logo {
   font-size: 1.125em;
 }
 
-
-
 /* Sobre */
-
 
 .sobre {
   padding: 60px 0;
@@ -100,7 +97,8 @@ a.menu-logo {
   margin: 0 auto;
 }
 
-.sobre-container::after, .sobre-container::before { 
+.sobre-container::after,
+.sobre-container::before {
   content: "";
   display: table;
   clear: both;
@@ -113,17 +111,17 @@ a.menu-logo {
 }
 
 .sobre-item {
-   float: left;
-   width: 460px;
-   margin: 0 10px;
+  float: left;
+  width: 460px;
+  margin: 0 10px;
 }
 
-.sobre-item img{
+.sobre-item img {
   display: block;
   max-width: 100%;
 }
 
-.sobre-item h3 { 
+.sobre-item h3 {
   font-size: 2.25em;
   background: #252525;
   width: 220px;
@@ -135,7 +133,6 @@ a.menu-logo {
   padding: 5px 0 10px 0;
   top: -25px;
   position: relative;
-
 }
 
 .sobre > p {
@@ -154,7 +151,6 @@ a.menu-logo {
   border-top: 3px solid #d6d3c8;
   border-bottom: 3px solid #d6d3c8;
   padding: 60px 0;
-
 }
 
 .produtos-container {
@@ -162,7 +158,8 @@ a.menu-logo {
   margin: 0 auto;
 }
 
-.produtos-container::after, .produtos-container::before{
+.produtos-container::after,
+.produtos-container::before {
   content: "";
   clear: both;
   display: table;
@@ -180,7 +177,7 @@ a.menu-logo {
   margin-bottom: 20px;
 }
 
-.produtos-item h2::before{
+.produtos-item h2::before {
   content: "";
   display: block;
   width: 100px;
@@ -192,7 +189,7 @@ a.menu-logo {
   box-shadow: 0 0 0 10px currentColor;
 }
 
-h2.produtos-paulista::before{
+h2.produtos-paulista::before {
   color: #492901;
 }
 
@@ -204,13 +201,12 @@ h2.produtos-mineiro::before {
   color: #d7a54d;
 }
 
-
 .produtos-item p {
   font-size: 0.875em;
   line-height: 1.4em;
 }
 
-.produtos-btn { 
+.produtos-btn {
   width: 180px;
   border: 3px solid;
   color: #252525;
@@ -224,4 +220,54 @@ h2.produtos-mineiro::before {
   margin: 20px auto 0 auto;
 }
 
+/* Locais */
 
+.locais {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+
+.locais-item {
+  clear: both;
+  margin: 60px auto;
+}
+
+.locais-item::after, .locais-item::before {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.locais-item img{
+  width: 460px;
+  float: left;
+  display: block;
+  margin: 0 10px;
+}
+
+.locais-item > div {
+  width: 460px;
+  float: left;
+  margin: 0 10px;
+}
+
+.locais-item h2 {
+  font-size: 2.25em;
+  margin-bottom: 20px;
+}
+
+.locais-item p {
+  font-size: 1.125em;
+  line-height: 1.4.em;
+  max-width: 320px;
+  margin-bottom: 40px;
+}
+
+.locais-item a {
+  font-size: 1.125em;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 3px solid;
+  color: #252525;
+  padding: 10px 20px;;
