--- a/brafe-1/brafe-1-puro/css/style.css
+++ b/brafe-1/brafe-1-puro/css/style.css
@@ -10,6 +10,10 @@ ul {
   margin: 0px;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Georgia, serif;
   color: #252525;
@@ -233,13 +237,14 @@ h2.produtos-mineiro::before {
   margin: 60px auto;
 }
 
-.locais-item::after, .locais-item::before {
+.locais-item::after,
+.locais-item::before {
   content: "";
   clear: both;
   display: table;
 }
 
-.locais-item img{
+.locais-item img {
   width: 460px;
   float: left;
   display: block;
@@ -270,4 +275,104 @@ h2.produtos-mineiro::before {
   text-decoration: none;
   border: 3px solid;
   color: #252525;
-  padding: 10px 20px;;
+  padding: 10px 20px;
+}
+
+/* Newsletter */
+
+.newsletter {
+  background: #e7e4d8;
+  padding: 30px 0;
+}
+
+.newsletter-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.newsletter-container::after,
+.newsletter-container::before {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.newsletter-info {
+  width: 460px;
+  margin: 0 10px;
+  float: left;
+}
+
+.newsletter-info h2 {
+  font-size: 2.25em;
+}
+
+.newsletter-info p {
+  font-size: 1.5em;
+  font-style: italic;
+}
+
+.newsletter form {
+  width: 460px;
+  margin: 10px 10px 0 10px;
+  float: left;
+}
+
+.newsletter form label {
+  display: none;
+}
+
+.newsletter input {
+  width: 320px;
+  border: 3px solid #252525;
+  background: none;
+  font-size: 1.5em;
+  font-style: italic;
+  font-family: Georgia, serif;
+  padding: 10px;
+  float: left;
+}
+
+.newsletter button {
+  font-size: 1.5em;
+  background: #252525;
+  font-family: Gerogia, serif;
+  text-transform: uppercase;
+  color: #fff;
+  width: 140px;
+  padding: 13px 0;
+  border: none;
+  cursor: pointer;
+}
+
+/* Footer */
+
+.footer {
+  background: #d6d3c8;
+  padding: 40px 0;
+}
+
+.footer-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.footer-container::after,
+.footer-container::before {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.footer p {
+  float: left;
+  margin: 0 10px;
+  line-height: 1.4em;
+  font-size: 1.125em;
+}
+
+.footer img {
+  float: right;
+  margin: 0 10px;
+  display: block;
+}
