--- a/brafe-1/brafe-1-puro/css/style.css
+++ b/brafe-1/brafe-1-puro/css/style.css
@@ -1,3 +1,7 @@
+/* Breakpoints
+960
+740 */
+
 /* Reset */
 
 body,
@@ -61,6 +65,13 @@ a.menu-logo {
   font-size: 1.125em;
 }
 
+@media only screen and (max-width: 739px) {
+  .menu-nav {
+    float: none;
+    clear: both;
+  }
+}
+
 /* Intro */
 
 .intro {
@@ -88,6 +99,12 @@ a.menu-logo {
 .intro p {
   font-style: italic;
   font-size: 1.125em;
+}
+
+@media only screen and (max-width: 739px) {
+  .intro {
+    padding: 60px 0;
+  }
 }
 
 /* Sobre */
@@ -147,6 +164,29 @@ a.menu-logo {
   max-width: 460px;
   margin: 20px auto;
 }
+
+@media only screen and (min-width: 740px) and (max-width: 980px) {
+
+  .sobre-container {
+    max-width: 720px;
+  }
+
+  .sobre-item {
+    width: 340px;
+  }
+}
+
+@media only screen and (max-width: 739px){
+  .sobre-container {
+    max-width: 300px;
+  }
+
+  .sobre-item {
+    width: 300px;
+    margin: 0 auto;
+  }
+}
+
 
 /* Produtos */
 
@@ -223,6 +263,30 @@ h2.produtos-mineiro::before {
   padding: 15px 0;
   margin: 20px auto 0 auto;
 }
+
+
+@media only screen and (min-width: 740px) and (max-width: 980px) {
+
+  .produtos-container {
+    max-width: 720px;
+  }
+
+  .produtos-item {
+    width: 220px;
+  }
+}
+
+@media only screen and (max-width: 739px){
+  .produtos-container {
+    max-width: 300px;
+  }
+
+  .produtos-item {
+    margin: 0 auto 20px auto;
+  }
+}
+
+
 
 /* Locais */
 
