--- a/brafe-1/brafe-1-puro/css/style.css
+++ b/brafe-1/brafe-1-puro/css/style.css
@@ -1,6 +1,3 @@
-/* Breakpoints
-960
-740 */
 
 /* Reset */
 
@@ -66,6 +63,15 @@ a.menu-logo {
 }
 
 @media only screen and (max-width: 739px) {
+  .menu {
+    text-align: center;
+  }
+
+  a.menu-logo {
+    float: none;
+    margin: 0 auto;
+  }
+  
   .menu-nav {
     float: none;
     clear: both;
@@ -342,6 +348,35 @@ h2.produtos-mineiro::before {
   padding: 10px 20px;
 }
 
+@media only screen and (min-width: 740px) and (max-width: 980px) {
+  .locais {
+    max-width: 720px;
+  }
+
+  .locais-item > div, .locais-item img {
+    width: 340px;
+  }
+
+
+
+}
+
+@media only screen and (max-width: 739px){
+
+ .locais {
+    max-width: 300px;
+  }
+
+  .locais-item > div, .locais-item img {
+    width: 300px;
+    margin: 0px;
+  }
+
+
+}
+
+
+
 /* Newsletter */
 
 .newsletter {
@@ -409,6 +444,33 @@ h2.produtos-mineiro::before {
   cursor: pointer;
 }
 
+@media only screen and (min-width: 740px) and (max-width: 980px) {
+ 
+  .newsletter-container {
+    max-width: 720px;
+  }
+
+  .newsletter-info, .newsletter form, .newsletter input {
+    width: 340px;
+  }
+
+
+}
+
+@media only screen and (max-width: 739px){
+
+  .newsletter-container {
+    max-width: 300px;
+  }
+
+  .newsletter-info, .newsletter form, .newsletter input {
+    width: 300px;
+    margin: 10px 0 0 0;
+  }
+
+}
+
+
 /* Footer */
 
 .footer {
@@ -439,4 +501,24 @@ h2.produtos-mineiro::before {
   float: right;
   margin: 0 10px;
   display: block;
+}
+
+
+
+@media only screen and (max-width: 739px){
+
+  .footer-container {
+    max-width: 300px;
+  }
+
+  .footer img {
+    margin: 20px 0;
+    float: none;
+  }
+
+  .footer p { 
+    margin: 0px;
+    float: none;
+  }
+
 }
