--- a/brafe-1/brafe-1-grid/css/style.css
+++ b/brafe-1/brafe-1-grid/css/style.css
@@ -41,14 +41,12 @@ img {
 	display: block;
 	padding: 10px;
 	margin-left: 10px;
-	
 }
 
 @media (max-width: 739px) {
-	.menu-nav {
+	.menu-nav ul {
 		float: none;
 	}
-
 	.menu-nav ul li a {
 		margin-left: 0px;
 		padding-left: 0px;
@@ -85,7 +83,7 @@ img {
 	font-size: 1.125em;
 }
 
-@media (max-width: 739px){
+@media (max-width: 739px) {
 	.intro {
 		padding: 60px 0;
 	}
@@ -93,8 +91,14 @@ img {
 
 /* Sobre */
 
+.sobre {
+	padding: 60px 0;
+}
+
 .sobre h2 {
 	font-size: 2.25em;
+	text-align: center;
+	margin-bottom: 60px;
 }
 
 .sobre-item h3 {
@@ -106,12 +110,19 @@ img {
 	font-weight: normal;
 	text-align: center;
 	position: relative;
+	width: 220px;
+	padding: 5px 0 10px 0;
+	top: -25px;
 }
+
 
 .sobre > p {
 	font-size: 1.125em;
 	line-height: 1.4em;
 	font-style: italic;
+	max-width: 460px;
+	margin: 20px auto;
+	text-align: center
 }
 
 /* Produtos */
@@ -120,10 +131,17 @@ img {
 	background: #e7e4d8;
 	border-top: 3px solid #d6d3c8;
 	border-bottom: 3px solid #d6d3c8;
+	padding: 60px 0;
+}
+
+.produtos-item {
+	margin-bottom: 40px;
 }
 
 .produtos-item h2 {
 	font-size: 2.25em;
+	text-align: center;
+	margin-bottom: 20px;
 }
 
 .produtos-item h2::before {
@@ -135,6 +153,7 @@ img {
 	border-radius: 50%;
 	border: 5px solid #e7e4d8;
 	box-shadow: 0 0 0 5px currentColor;
+	margin: 20px auto
 }
 
 h2.produtos-paulista::before {
@@ -162,17 +181,32 @@ h2.produtos-mineiro::before {
 	font-size: 1.125em;
 	font-weight: bold;
 	text-transform: uppercase;
+	display: block;
+	width: 180px;
+	padding: 15px 0;
+	margin: 0 auto;
 }
 
 /* Locais */
 
+.locais {
+	padding: 60px 0;
+}
+
+.locais-item {
+	margin-bottom: 40px;
+}
+
 .locais-item h2 {
 	font-size: 2.25em;
+	margin-bottom: 20px;
 }
 
 .locais-item p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+	max-width: 320px;
+	margin-bottom: 40px;
 }
 
 .locais-item a {
@@ -181,12 +215,14 @@ h2.produtos-mineiro::before {
 	text-decoration: none;
 	border: 3px solid;
 	color: #252525;
+	padding: 10px 20px;
 }
 
 /* Assine */
 
 .assine {
 	background: #e7e4d8;
+	padding: 30px 0;
 }
 
 .assine-info h2 {
@@ -208,6 +244,9 @@ h2.produtos-mineiro::before {
 	font-size: 1.5em;
 	font-style: italic;
 	font-family: Georgia, serif;
+	width: calc(100% - 140px);
+	padding: 10px;
+	float: left;
 }
 
 .assine button {
@@ -218,15 +257,29 @@ h2.produtos-mineiro::before {
 	font-size: 1.5em;
 	color: #fff;
 	cursor: pointer;
+	width: 140px;
+	padding: 13px 0;
 }
 
 /*Footer*/
 
 .footer {
 	background: #d6d3c8;
+	padding: 40px 0;
+}
+
+.footer img {
+	float: right;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+}
+
+@media (max-width: 739px) {
+	.footer img {
+		float: none;
+		margin-top: 20px;
+	}
 }
