--- a/brafe-1/brafe-1-flexbox/css/style.css
+++ b/brafe-1/brafe-1-flexbox/css/style.css
@@ -14,10 +14,17 @@ body {
 	box-sizing: border-box;
 }
 
+.container {
+	display: flex;
+	max-width: 960px;
+	margin: 0 auto;
+}
+
 /* Menu */
 
 .menu {
 	background: #252525;
+	padding: 15px 0;
 }
 
 .menu-nav a {
@@ -26,12 +33,29 @@ body {
 	font-size: 1.125em;
 }
 
+.menu-nav {
+	flex: 1;
+	align-self: center;
+}
+
+.menu-nav ul {
+	float: right;
+	display: flex;
+	list-style: none;
+}
+
+.menu-nav ul li a {
+	padding: 10px;
+}
+
 /* Intro */
 
 .intro {
 	background: url('../img/bg-intro.jpg') no-repeat center center;
 	background-size: cover;
 	color: #fff;
+	padding: 150px 0;
+	text-align: center;
 }
 
 .intro h1 {
@@ -45,6 +69,7 @@ body {
 	width: 20px;
 	height: 4px;
 	background: #fff;
+	margin: 10px auto;
 }
 
 .intro p {
@@ -54,8 +79,24 @@ body {
 
 /* Sobre */
 
+.sobre {
+	padding: 60px 0;
+}
+
 .sobre h2 {
 	font-size: 2.25em;
+	text-align: center;
+	margin-bottom: 60px;
+}
+
+.sobre-item {
+	flex: 1;
+	margin: 0 10px;
+}
+
+.sobre-item img {
+	max-width: 100%;
+	display: block;
 }
 
 .sobre-item h3 {
@@ -67,12 +108,18 @@ body {
 	font-weight: normal;
 	text-align: center;
 	position: relative;
+	width: 220px;
+	padding: 5px 0 10px 0;
+	top: -25px;
 }
 
 .sobre > p {
 	font-size: 1.125em;
 	line-height: 1.4em;
 	font-style: italic;
+	margin: 20px auto;
+	max-width: 460px;
+	text-align: center;
 }
 
 /* Produtos */
@@ -81,10 +128,18 @@ body {
 	background: #e7e4d8;
 	border-top: 3px solid #d6d3c8;
 	border-bottom: 3px solid #d6d3c8;
+	padding: 60px 0;
+}
+
+.produtos-item {
+	flex: 1;
+	margin: 0 10px 40px 10px;
 }
 
 .produtos-item h2 {
 	font-size: 2.25em;
+	text-align: center;
+	margin-bottom: 20px;
 }
 
 .produtos-item h2::before {
@@ -96,6 +151,7 @@ body {
 	border-radius: 50%;
 	border: 5px solid #e7e4d8;
 	box-shadow: 0 0 0 5px currentColor;
+	margin: 20px auto;
 }
 
 h2.produtos-paulista::before {
@@ -123,17 +179,44 @@ h2.produtos-mineiro::before {
 	font-size: 1.125em;
 	font-weight: bold;
 	text-transform: uppercase;
+	display: block;
+	padding: 15px 0;
+	width: 180px;
+	margin: 20px auto 0 auto;
 }
 
 /* Locais */
 
+.locais {
+	padding: 60px 0;
+}
+
+.locais-item {
+	margin-bottom: 40px;
+}
+
+.locais-img, .locais-info {
+	flex: 1;
+	margin: 0 10px;
+}
+
+
+
+.locais-img img {
+	display: block;
+	max-width: 100%;
+}
+
 .locais-item h2 {
 	font-size: 2.25em;
+	margin-bottom: 20px;
 }
 
 .locais-item p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+	max-width: 320px;
+	margin-bottom: 40px;
 }
 
 .locais-item a {
@@ -142,6 +225,7 @@ h2.produtos-mineiro::before {
 	text-decoration: none;
 	border: 3px solid;
 	color: #252525;
+	padding: 10px 20px;
 }
 
 /* Assine */
