--- a/brafe-1/brafe-1-flexbox/css/style.css
+++ b/brafe-1/brafe-1-flexbox/css/style.css
@@ -232,7 +232,14 @@ h2.produtos-mineiro::before {
 
 .assine {
 	background: #e7e4d8;
+	padding: 30px 0;
 }
+
+.assine-info {
+	flex: 1;
+	margin: 0 10px;
+}
+
 
 .assine-info h2 {
 	font-size: 2.25em;
@@ -243,19 +250,34 @@ h2.produtos-mineiro::before {
 	font-style: italic;
 }
 
+.assine form {
+	flex: 1;
+	margin: 0 10px;
+	display: flex;
+	flex-wrap: wrap;
+	align-content: flex-start;
+}
+
 .assine form label {
 	display: none;
 }
 
 .assine input {
+	flex: 1;
+	align-self: flex-start;
+	padding: 10px;
 	border: 3px solid #252525;
 	background: none;
 	font-size: 1.5em;
 	font-style: italic;
 	font-family: Georgia, serif;
+
 }
 
 .assine button {
+	flex: 1;
+	padding: 13px;
+	align-self: flex-start;
 	background: #252525;
 	border: none;
 	font-family: Georgia, serif;
@@ -269,9 +291,16 @@ h2.produtos-mineiro::before {
 
 .footer {
 	background: #d6d3c8;
+	padding: 40px 0;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+	margin: 0 10px;
+	flex: 1;
+}
+
+.footer-img {
+	margin: 0 10px;
 }
