--- a/brafe-1/brafe-1-flexbox/css/style.css
+++ b/brafe-1/brafe-1-flexbox/css/style.css
@@ -20,6 +20,13 @@ body {
 	margin: 0 auto;
 }
 
+@media (max-width: 739px) {
+	.container {
+		flex-direction: column;
+		max-width: 300px;
+	}
+}
+
 /* Menu */
 
 .menu {
@@ -31,7 +38,13 @@ body {
 	text-decoration: none;
 	color: #fff;
 	font-size: 1.125em;
+	margin: 0 10px;
 }
+
+.menu-logo {
+	margin: 0 10px;
+}
+
 
 .menu-nav {
 	flex: 1;
@@ -48,6 +61,20 @@ body {
 	padding: 10px;
 }
 
+@media (max-width: 739px) {
+	.menu-nav {
+		margin: 0px;
+	}
+
+	.menu-logo {
+		margin: 0 px;
+	}
+
+	.menu-nav ul li a {
+		padding-left: 0px;
+	}
+}
+
 /* Intro */
 
 .intro {
@@ -56,6 +83,12 @@ body {
 	color: #fff;
 	padding: 150px 0;
 	text-align: center;
+}
+
+@media (max-width: 739px) {
+	.intro {
+		padding: 60px 0;
+	}
 }
 
 .intro h1 {
@@ -94,9 +127,17 @@ body {
 	margin: 0 10px;
 }
 
+@media (max-width: 739px) {
+	.sobre-item {
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+}
+
 .sobre-item img {
-	max-width: 100%;
 	display: block;
+	max-width: 100%;
+	
 }
 
 .sobre-item h3 {
@@ -180,9 +221,16 @@ h2.produtos-mineiro::before {
 	font-weight: bold;
 	text-transform: uppercase;
 	display: block;
-	padding: 15px 0;
 	width: 180px;
+	padding: 15px 0;
 	margin: 20px auto 0 auto;
+}
+
+@media (max-width: 739px) {
+	.produtos-item {
+		margin-left: 0px;
+		margin-right: 0px;
+	}
 }
 
 /* Locais */
@@ -228,6 +276,13 @@ h2.produtos-mineiro::before {
 	padding: 10px 20px;
 }
 
+@media (max-width: 739px) {
+	.locais-img, .locais-info {
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+}
+
 /* Assine */
 
 .assine {
@@ -260,6 +315,16 @@ h2.produtos-mineiro::before {
 
 .assine form label {
 	display: none;
+}
+
+@media (max-width: 739px) {
+	.assine-info {
+		margin: 0 0 20px 0;
+	}
+	
+	.assine form {
+		margin: 0px;
+	}
 }
 
 .assine input {
@@ -303,4 +368,11 @@ h2.produtos-mineiro::before {
 
 .footer-img {
 	margin: 0 10px;
+}
+
+@media (max-width: 739px) {
+	.footer-img, .footer p {
+		margin: 10px 0px;
+	}
+	
 }
