Update css brafe-1-bootstrap

--- a/brafe-1/brafe-1-bootstrap/css/style.css
+++ b/brafe-1/brafe-1-bootstrap/css/style.css
@@ -14,10 +14,16 @@ body {
 	box-sizing: border-box;
 }
 
+img {
+	display: block;
+	max-width: 100%;
+}
+
 /* Menu */
 
 .menu {
 	background: #252525;
+	padding: 15px 0px;
 }
 
 .menu-nav a {
@@ -26,17 +32,46 @@ body {
 	font-size: 1.125em;
 }
 
+.menu-nav ul { 
+	float: right;
+	list-style: none;
+}
+
+.menu-nav ul li{
+	display: inline-block;
+}
+
+.menu-nav ul li a {
+	display: inline-block;
+	padding: 10px;
+	margin-left: 10px;
+}
+
+@media (max-width: 768px) {
+	.menu-nav ul {
+		float: none
+	}
+	
+	.menu-nav ul li a{
+		padding-left: 0px;
+		margin-left: 0px;
+	}
+}
+
 /* Intro */
 
 .intro {
 	background: url('../img/bg-intro.jpg') no-repeat center center;
 	background-size: cover;
 	color: #fff;
+	padding: 150px 0;
+	text-align: center;
 }
 
 .intro h1 {
 	text-transform: uppercase;
 	font-size: 3em;
+	font-weight: bold;
 }
 
 .intro h1::after {
@@ -45,6 +80,7 @@ body {
 	width: 20px;
 	height: 4px;
 	background: #fff;
+	margin: 20px auto;
 }
 
 .intro p {
@@ -52,10 +88,23 @@ body {
 	font-size: 1.125em;
 }
 
+@media (max-width: 768px){
+	.intro {
+		padding: 60px 0;
+	}
+}
+
 /* Sobre */
+
+.sobre {
+	padding: 60px 0;
+}
 
 .sobre h2 {
 	font-size: 2.25em;
+	text-align: center;
+	margin-bottom: 60px;
+	font-weight: bold;
 }
 
 .sobre-item h3 {
@@ -67,12 +116,18 @@ body {
 	font-weight: normal;
 	text-align: center;
 	position: relative;
+	width: 220px;
+	padding: 5px 0 10px 0;
+	top: -25px;
 }
 
 .sobre > p {
 	font-size: 1.125em;
 	line-height: 1.4em;
 	font-style: italic;
+	max-width: 460px;
+	text-align: center;
+	margin: 20px auto;
 }
 
 /* Produtos */
@@ -81,10 +136,19 @@ body {
 	background: #e7e4d8;
 	border-top: 3px solid #d6d3c8;
 	border-bottom: 3px solid #d6d3c8;
+	padding-top: 60px;
+	padding-bottom: 60px;
+}
+
+.produtos-item {
+	margin-bottom: 40px;
 }
 
 .produtos-item h2 {
 	font-size: 2.25em;
+	text-align: center;
+	margin-bottom: 20px;
+	font-weight: bold;
 }
 
 .produtos-item h2::before {
@@ -96,6 +160,7 @@ body {
 	border-radius: 50%;
 	border: 5px solid #e7e4d8;
 	box-shadow: 0 0 0 5px currentColor;
+	margin: 20px auto;
 }
 
 h2.produtos-paulista::before {
@@ -123,6 +188,15 @@ h2.produtos-mineiro::before {
 	font-size: 1.125em;
 	font-weight: bold;
 	text-transform: uppercase;
+	width: 180px;
+	display: block;
+	margin: 20px auto 0 auto;
+	padding: 15px 0;
+}
+
+.produtos-btn:hover {
+	text-decoration: none;
+	color: #252525;
 }
 
 /* Locais */
