--- a/brafe-3/brafe-3-puro/css/style.css
+++ b/brafe-3/brafe-3-puro/css/style.css
@@ -61,16 +61,37 @@ a {
   padding-left: 0px;
 }
 
+@media (max-width: 739px) {
+  .header-logo {
+    float: none;
+  }
+
+  .header-menu ul {
+    float: none;
+    margin-top: 10px;
+  }
+}
+
 
 /* Main */
 
+
+.main-container {
+  display: flex;
+}
+
+
+@media (max-width: 739px) {
+  .main-container {
+    flex-direction: column;
+  }
+}
 
 /* Side nav */
 
 .side-nav {
   width: 300px;
   background: #252525;
-  float: left;
 }
 
 .side-nav li a {
@@ -114,4 +135,170 @@ a {
 
 .nav-hospedagens::before {
   background-position: 0 -120px;
+}
+
+@media (min-width: 740px)  and (max-width: 980px){
+  .side-nav {
+    width: 200px;
+  }
+}
+
+@media (max-width: 739px) {
+  .side-nav {
+    margin: 20px 0 0 20px;
+    background: none;
+    width: auto;
+  }
+
+  .side-nav li {
+    display: inline-block;
+  }
+
+  .side-nav li a::before {
+    display: block;
+    margin: 0px;
+    top: 0px;
+  }
+
+  .side-nav li a {
+    width: 44px;
+    height: 44px;
+    overflow: hidden;
+    padding: 10px;
+    border: none;
+    color: #252525;
+    background: #252525;
+    border-radius: 4px;
+
+  }
+}
+
+/* Produtos */
+
+.produtos {
+  width: calc(100% - 300px);
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 20px;
+}
+
+.produtos header::after, .produtos header::before {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.produtos h1 {
+  font-size: 2.25em;
+  float: left;
+}
+
+.adicionar-produtos {
+  background: #c17139;
+  color: #e7e4d8;
+  font-size: 1.125em;
+  font-family: Courier, monospace;
+  text-transform: uppercase;
+  padding: 15px 20px;
+  border-radius: 4px;
+  float: right;
+  text-align: center;
+}
+
+.produtos-item {
+  background: #fff;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0, .35);
+  margin-top: 20px;
+  position: relative;
+}
+
+.produtos-item::before, .produtos-item::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.produtos-item img {
+  float: left;
+}
+
+.produtos-item a {
+  width: 24px;
+  height: 24px;
+  overflow: hidden;
+  text-indent: -200px;
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  background: url('../img/edit.svg') no-repeat;
+}
+
+.produtos-item a:hover {
+  background: url('../img/edit-hover.svg') no-repeat
+}
+
+.produtos-item ul {
+  float: left;
+  padding: 0 20px;
+  width: calc(100% - 140px);
+}
+
+.produtos-item li {
+  font-size: 1.125em;
+  font-family: Courier, monospace;
+  padding: 10px 0;
+  border-bottom: 1px solid #e7e4d8;
+}
+
+.produtos-item li:last-child {
+  border: none
+}
+
+.produtos-item span {
+  font-weight: bold;
+  display: inline-block;
+  width: 70px;
+}
+
+
+@media (min-width: 740px)  and (max-width: 980px){
+  .produtos {
+    width: calc(100% - 200px);
+  }
+}
+
+@media (max-width: 739px) {
+  .produtos {
+    width: 100%;
+  }
+
+  .produtos h1 {
+    float: none;
+  }
+
+  .adicionar-produtos {
+    float: none;
+    display: inline-block;
+    margin: 10px 0;
+  }
+
+  .produtos-item img {
+    float: none
+  }
+
+  .produtos-item ul {
+    float: none;
+    width: 100%;
+  }
+}
+
+
+/* Footer */
+
+.footer {
+  background: #d6d3c8;
+  text-align: center;
+  padding: 60px 0;
+  font-size: 1.125em;
+  line-height: 1.4em;
 }
